2010-11-04 [wwp]	3.7.6cvs62

	* src/filtering.c
		Fix bug 2293, "filtering: simplify expression", as simplifying
		this expression doesn't make it less easy to understand and we
		gain few cycles by making the logical expression more simple
		by applying. Patch by Nicolas Kaiser.

2010-11-03 [colin]	3.7.6cvs61

	* src/addrindex.c
		Fix bug 2294, "addrindex.c: address index conversion always
		fails". Clearly a copy-paste-bug. Patch by Nicolas Kaiser.

2010-11-02 [wwp]	3.7.6cvs60

	* src/action.c
	* src/statusbar.c
	* src/toolbar.c
		Enlarge the progress bar (main window) a bit when compiling
		for UMPCs like maemo: this solves truncated text that might
		appear in the progress bar while processing messages.
		Also use a more compact string format when displaying
		progress like 'number/total', still for UMPCs, this fixes
		a previous inconsistency with these format strings where
		no space around the / were used sometimes.

2010-10-26 [ticho]	3.7.6cvs59

	* src/news.c
		Recreate NNTP session if server port setting has changed. Fixes
		bug #2092.

2010-10-26 [colin]	3.7.6cvs58

	* src/imap_gtk.c
	* src/mh_gtk.c
		Fix copy-paste error, thanks to David Relson
		for spotting it.

2010-10-18 [colin]	3.7.6cvs57

	* src/action.c
	* src/addrharvest.c
	* src/alertpanel.c
	* src/filtering.c
	* src/jpilot.c
	* src/prefs_themes.c
	* src/procmime.c
	* src/textview.c
	* src/gtk/gtkutils.c
	* src/gtk/quicksearch.c
	* src/gtk/quicksearch.h
	* src/plugins/pgpcore/passphrase.c
	* src/plugins/spamassassin/libspamc.c
		Fix warnings

2010-10-17 [colin]	3.7.6cvs56

	* src/prefs_themes.c
	* src/gtk/gtkaspell.c
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
	* src/gtk/inputdialog.c
	* src/gtk/progressdialog.c
		Undeprecate a few things

2010-10-17 [colin]	3.7.6cvs55

	* src/main.c
	* src/gtk/authors.h
	* src/gtk/quicksearch.c
	* src/gtk/quicksearch.h
		Add ability to search from the command-line.
		Closes bug 2249, ' Making QuickSearch independent from the GUI'
		Patch by Sebastien Bigarret.