@@ -4058,3 +4058,4 @@
 ( cvs diff -u -r 1.12.2.61 -r 1.12.2.62 src/action.c;  cvs diff -u -r 1.5.2.27 -r 1.5.2.28 src/statusbar.c;  cvs diff -u -r 1.43.2.120 -r 1.43.2.121 src/toolbar.c;  ) > 3.7.6cvs60.patchset
 ( cvs diff -u -r 1.28.2.43 -r 1.28.2.44 src/addrindex.c;  ) > 3.7.6cvs61.patchset
 ( cvs diff -u -r 1.60.2.55 -r 1.60.2.56 src/filtering.c;  ) > 3.7.6cvs62.patchset
+( cvs diff -u -r 1.1.2.15 -r 1.1.2.16 manual/es/advanced.xml;  ) > 3.7.6cvs63.patchset
